force-app/main/default/objects/copadoccmint__Record_Type_Mapping__c/copadoccmint__Record_Type_Mapping__c.object-meta.xml
<CustomObject>
    <label>Record Type Mapping</label>
    <nameField>
        <displayFormat>RTM-{000000000}</displayFormat>
        <label>Record Type Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Type Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>