force-app/main/default/objects/copadoccmint__Record_Type_Mapping__c/fields/copadoccmint__Project__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>copado__Project__c</referenceTo>
    <relationshipLabel>Record Type Mappings</relationshipLabel>
    <relationshipName>Record_Type_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>