force-app/main/default/objects/copadoccmint__Record_Type_Mapping__c/fields/copadoccmint__Salesforce_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Salesforce_Record_Type_Name__c</fullName>
    <label>Salesforce Record Type Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>